force-app/main/default/objects/Payment__c/fields/AuthCode__c.field-meta.xml
<CustomField>
    <fullName>AuthCode__c</fullName>
    <label>AuthCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>