force-app/main/default/objects/Payment__c/fields/iscancellable__c.field-meta.xml
<CustomField>
    <fullName>iscancellable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iscancellable</label>
    <type>Checkbox</type>
</CustomField>