force-app/main/default/objects/Payment__c/fields/iscapturable__c.field-meta.xml
<CustomField>
    <fullName>iscapturable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iscapturable</label>
    <type>Checkbox</type>
</CustomField>