force-app/main/default/objects/Payment__c/fields/isrefundable__c.field-meta.xml
<CustomField>
    <fullName>isrefundable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isrefundable</label>
    <type>Checkbox</type>
</CustomField>