force-app/main/default/objects/Payment__c/fields/Merchant_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account_Code__c</fullName>
    <label>Merchant Account Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>