force-app/main/default/objects/Payment__c/fields/Merchant_Reference__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Reference__c</fullName>
    <label>Merchant Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>