force-app/main/default/objects/Payment__c/fields/original_message__c.field-meta.xml
<CustomField>
    <fullName>original_message__c</fullName>
    <label>original message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>