force-app/main/default/objects/Payment__c/fields/Payment_status_externalid__c.field-meta.xml
<CustomField>
    <fullName>Payment_status_externalid__c</fullName>
    <label>Payment_status_externalid</label>
    <length>25</length>
    <type>Text</type>
</CustomField>